--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "silex/silex": "1.0.*",
+        "silex/silex": "~1.1",
         "leafo/lessphp": "~0.4"
     },
     "autoload": {
